--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,29 @@
 body {
-  background: green;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+.languages {
+  display: flex;
+  justify-content: center;
+}
+
+.languages li {
+  cursor: pointer;
+  font-weight: bold;
+  margin: 10px;
+
 }
